Add user profile page
- Implemented ProfilePage component to display user information and statistics.
- Added functionality to fetch user data from the API and handle loading states.
- Created a settings section for updating display name and viewing email.
- Enhanced user experience with quick action buttons for navigation.
- Updated translations for profile-related texts in English and Polish.
- Modified backend to include username and XP tracking for users.

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -63,5 +63,25 @@
   "Courses": "Courses",
   "Mini Games": "Mini Games",
   "Progress": "Progress",
-  "Leaderboard": "Leaderboard"
+  "Leaderboard": "Leaderboard",
+  
+  "profile_my_profile": "My Profile",
+  "profile_loading": "Loading profile...",
+  "profile_not_logged_in": "You are not logged in",
+  "profile_please_login": "Please log in to see your profile.",
+  "profile_change_avatar": "Change avatar",
+  "profile_choose_avatar": "Choose your avatar",
+  "profile_record": "Record",
+  "profile_to_level": "to level",
+  "profile_lessons_completed": "Lessons Completed",
+  "profile_games_played": "Games Played",
+  "profile_badges_earned": "Badges Earned",
+  "profile_accuracy": "Accuracy",
+  "profile_account_settings": "Account Settings",
+  "profile_display_name": "Display Name",
+  "profile_email": "Email",
+  "profile_email_hint": "Email cannot be changed",
+  "profile_save_changes": "Save Changes",
+  "profile_saved": "Changes saved!",
+  "profile_quick_actions": "Quick Actions"
 }
