--- a/frontend/src/locales/pl/translation.json
+++ b/frontend/src/locales/pl/translation.json
@@ -69,5 +69,80 @@
   "profile_email_hint": "Email nie może być zmieniony",
   "profile_save_changes": "Zapisz zmiany",
   "profile_saved": "Zmiany zapisane!",
-  "profile_quick_actions": "Szybkie akcje"
+  "profile_quick_actions": "Szybkie akcje",
+  
+  "footer_desc": "Ucz się kodować poprzez kursy i mini-gry!",
+  "footer_company_title": "Firma",
+  "footer_link_about": "O nas",
+  "footer_link_blog": "Blog",
+  "footer_link_careers": "Kariera",
+  "footer_link_press": "Prasa",
+  "footer_support_title": "Wsparcie",
+  "footer_link_help": "Centrum pomocy",
+  "footer_link_contact": "Kontakt",
+  "footer_link_faq": "FAQ",
+  "footer_link_community": "Społeczność",
+  "footer_copyright": "© 2025 Codelingo. Wszelkie prawa zastrzeżone.",
+
+  "minigames_title": "Mini Gry",
+  "minigames_subtitle": "Ucz się poprzez zabawę i wyzwania!",
+  "play_now": "Graj teraz",
+
+  "difficulty_easy": "Łatwy",
+  "difficulty_medium": "Średni",
+  "difficulty_hard": "Trudny",
+
+  "game_memory_title": "Pamięć kodu",
+  "game_memory_desc": "Zapamiętaj i odtwórz fragmenty kodu",
+
+  "game_refactor_title": "Refaktoryzacja na czas",
+  "game_refactor_desc": "Naprawiaj i upraszczaj zły kod",
+
+  "game_variable_title": "Polowanie na zmienne",
+  "game_variable_desc": "Znajdź źle użyte zmienne",
+
+  "game_bug_title": "Infekcja błędów",
+  "game_bug_desc": "Powstrzymaj rozprzestrzenianie się błędów w kodzie",
+
+  "progress_title": "Twój postęp",
+  "progress_current_streak": "Aktualna seria",
+  "progress_record": "Rekord: {{value}} dni",
+  "progress_total_experience": "Łączne doświadczenie",
+  "progress_to_next_level": "{{xp}} XP do poziomu {{level}}",
+  "progress_level_badge": "Poziom {{level}}",
+  "progress_level_title_junior": "Młodszy Koder",
+  "progress_next_level_title": "Następny: Średni Koder",
+  "progress_weekly_activity": "Aktywność tygodniowa",
+  "progress_recent_achievements": "Ostatnie osiągnięcia",
+
+  "day_mon": "Pn",
+  "day_tue": "Wt",
+  "day_wed": "Śr",
+  "day_thu": "Cz",
+  "day_fri": "Pt",
+  "day_sat": "Sb",
+  "day_sun": "Nd",
+
+  "achievement_fire_title": "Ognista seria",
+  "achievement_fire_desc": "Seria 7 dni!",
+  "achievement_sharp_title": "Strzelec wyborowy",
+  "achievement_sharp_desc": "100% celności",
+  "achievement_early_title": "Ranny ptaszek",
+  "achievement_early_desc": "Uczył się przed 9 rano",
+  
+  "leaderboard_title": "Tablica wyników",
+  "leaderboard_subtitle": "Rywalizuj z uczniami na całym świecie",
+  "leaderboard_loading": "Ładowanie tablicy wyników...",
+  "leaderboard_empty": "Brak danych tablicy wyników.",
+  "leaderboard_error": "Nie udało się załadować tablicy wyników",
+  "leaderboard_unexpected_error": "Nieoczekiwany błąd",
+  "leaderboard_crown": "Korona",
+  "leaderboard_champion": "Mistrz",
+  "leaderboard_xp": "Punkty doświadczenia",
+  "leaderboard_flame": "Ogień",
+  "leaderboard_streak_days": "{{value}} dni z rzędu",
+  "leaderboard_you": "Ty",
+  "leaderboard_trophy": "Trofeum",
+  "leaderboard_medal": "Medal",
+  "leaderboard_award": "Nagroda"
 }
