--- a/frontend/src/locales/es/translation.json
+++ b/frontend/src/locales/es/translation.json
@@ -161,10 +161,24 @@
   "howit_step2_title": "Completa lecciones cortas",
   "howit_step2_text": "Aprende en pequeñas partes y refuerza con práctica.",
   "howit_step3_title": "Gana XP",
-  "howit_step3_text": "Obtén puntos y sube en la clasificación."
+  "howit_step3_text": "Obtén puntos y sube en la clasificación.",
 
-
-
-
-
+  "minigames": {
+  "choose_language": "Elige un lenguaje de programación",
+  "back": "Atrás",
+  "select_title": "Selecciona un lenguaje para jugar",
+  "select_subtitle": "Elige el lenguaje de programación que deseas practicar. Las tareas estarán en tu idioma seleccionado.",
+  "continue_select": "Selecciona un lenguaje para continuar",
+  "continue_with": "Continuar con {{language}}",
+  "languages": {
+    "python": "Python",
+    "python_desc": "Ideal para principiantes",
+    "javascript": "JavaScript",
+    "javascript_desc": "Desarrollo web",
+    "java": "Java",
+    "java_desc": "Desarrollo empresarial",
+    "htmlcss": "HTML / CSS",
+    "htmlcss_desc": "Conceptos básicos de la web"
+  }
+}
 }
