--- a/frontend/src/locales/zh/translation.json
+++ b/frontend/src/locales/zh/translation.json
@@ -160,7 +160,24 @@
   "howit_step2_title": "完成简短课程",
   "howit_step2_text": "分阶段学习并通过练习巩固。",
   "howit_step3_title": "获得经验值",
-  "howit_step3_text": "积累积分并提升排行榜名次。"
+  "howit_step3_text": "积累积分并提升排行榜名次。",
 
-
+  "minigames": {
+  "choose_language": "选择编程语言",
+  "back": "返回",
+  "select_title": "选择一种语言来玩",
+  "select_subtitle": "选择你想练习的编程语言。任务将使用你选择的语言。",
+  "continue_select": "请选择一种语言继续",
+  "continue_with": "继续使用 {{language}}",
+  "languages": {
+    "python": "Python",
+    "python_desc": "非常适合初学者",
+    "javascript": "JavaScript",
+    "javascript_desc": "网页开发",
+    "java": "Java",
+    "java_desc": "企业开发",
+    "htmlcss": "HTML / CSS",
+    "htmlcss_desc": "网页基础"
+  }
+}
 }
